gerror: Mention that g_clear_error can be used with an "empty" GError

It is fine to do:
GError *error = NULL;
g_clear_error (&error);

https://bugzilla.gnome.org/show_bug.cgi?id=762937